# lofty-test

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  metrics.py  notifier.py  rss_parser.py  storage.py
app/models/: post.py
app/utils/: __init__.py  hashing.py
deploy/: prometheus.yml
tests/: conftest.py  test_config.py  test_hashing.py  test_main.py  test_notifier.py  test_post.py  test_rss_parser.py  test_storage.py
