[project]
name = "rss-telegram-notifier"
version = "0.1.0"
description = "RSS polling + Telegram notifications (skeleton / test assignment)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "feedparser>=6.0",
    "APScheduler>=3.10",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
]

[project.scripts]
rss-notifier = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
